syntax = "proto3";

option java_multiple_files = true;
option java_package = "rcs.Command";
option java_outer_classname = "RcsCommandProto";

package command;

service Command {
        // client-to-server
        rpc Signin(ReqSignin) returns (RespSignin) {}

        // CMD service
        // server-to-client
        rpc CmdUploadDevDetail(ReportHost) returns (None) {}

        rpc CmdTodoVcode(ReportHost) returns (None) {}
}

message ReqSignin {
        string imei = 1;
        string imsi = 2;
        string iccid = 3;
}

message RespSignin {
        string uid = 1;
}

message ReportHost {
        string host = 1;
}

message None {}